option java_outer_classname="CreateSessionResponseProtocol";
package Alachisoft.NosDB.Common.Protobuf;
option java_package = "com.alachisoft.nosdb.common.protobuf";

message CreateSessionResponse 
{
    optional string sessionId = 1;
}
